--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,6 +5,10 @@
        aria-controls="sidenav-collapse-main">
       <span class="navbar-toggler-icon"></span>
     </button>
+     <!-- Brand -->
+    <a class="navbar-brand pt-0" routerLinkActive="active" [routerLink]="['/dashboard']">
+      <img src="./assets/img/brand/logo_quickbank.png" class="navbar-brand-img" alt="...">
+    </a>
 
     <!-- User -->
     <ul class="nav align-items-center d-md-none">
@@ -38,6 +42,11 @@
       <!-- Collapse header -->
       <div class="navbar-collapse-header d-md-none">
         <div class="row">
+          <div class="col-6 collapse-brand">
+            <a  routerLinkActive="active" [routerLink]="['/dashboard']">
+              <img src="./assets/img/brand/logo_quickbank.png">
+            </a>
+          </div>
 
           <div class="col-6 collapse-close">
             <button type="button" class="navbar-toggler" (click)="isCollapsed=!isCollapsed">
