--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -88,7 +88,7 @@
       </div>
       <div class="row mt-3">
         <div class="col-6">
-          <a href="javascript:void(0)" class="text-light"><small>Esqueceu sua senha?</small></a>
+          <a href="javascript:void(0)" class="text-light" routerLink="/forgot_password" ><small>Esqueceu sua senha?</small></a>
         </div>
         <div class="col-6 text-right">
           <a href="javascript:void(0)" class="text-light" routerLink="/register"><small>Criar nova conta</small></a>
