--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -72,7 +72,7 @@
               <div class="row">
 
               <div class="col-md-6 col-6"><label class="h5 text-white text-uppercase link-left"> Últimas transações</label></div>
-              <div *ngIf="transferenciasResumo.length > 0" class="col-md-6 col-6"><a class="h5 text-white text-uppercase link-right" href="#">Ver mais</a></div>
+              <div *ngIf="transferenciasResumo.length > 0" class="col-md-6 col-6"><a class="h5 text-white text-uppercase link-right" routerLink="/transferencias" href="#">Ver mais</a></div>
 
               </div>
 
